# pi-vs-claude-code

./: .env.sample  .gitignore  CLAUDE.md  ai-report-48hr.html  ai-report-48hr.md  dark-teal.itermcolors  deep-researcher-sources.md  justfile  log_onchain_data.sh  package-lock.json  recent-artists-report.html  try-parse.ts
.claude/: settings.json
.claude/skills/backtest-system/: GEMINI.md  SKILL.md  pyproject.toml
.claude/skills/backtest-system/.claude/data/sessions/: 01470802-f26d-412a-95c3-494b93567d74.json  f805a62a-2ed5-4f08-b8a5-05b585c40488.json
.claude/skills/backtest-system/scripts/: charts.py  data.py  engine.py  launch_dashboard.sh  optimize_params.py  quick_backtest.py  status_check.py  strategies.py  strategy_scanner.py
.claude/skills/china-data/: SKILL.md  pyproject.toml
.claude/skills/china-data/scripts/: china_data.py
.claude/skills/china-data/scripts/sources/: macro.py  news.py  sentiment.py  stocks.py
.claude/skills/sta-v2/: SKILL.md  pyproject.toml
.claude/skills/sta-v2/references/: vps-setup.md
.claude/skills/sta-v2/scripts/: main.py
.claude/skills/sta-v2/scripts/tools/: advanced_indicators.py  stock_ta_tool.py  volume_indicators.py
.claude/skills/wsp-v3/: .gitignore  SKILL.md  pyproject.toml
.claude/skills/wsp-v3/engines/: __init__.py  bing.py  brave.py  tavily.py
.claude/skills/wsp-v3/references/: api_coverage.md
.claude/skills/wsp-v3/scripts/: wsp.py
.claude/skills/wsp-v3/searchers/: __init__.py  china.py  forums.py  geopolitics.py  news.py  trading.py
.claude/skills/wsp-v3/utils/: __init__.py  cache.py  config.py  formatter.py  rate_limiter.py
.pi/: polymarket-config.json
(+463 files in other folders)
