[project]
name = "sta-v2"
version = "2.0.0"
description = "Self-contained Stock Technical Analyzer - VPS compatible"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "TA-Lib>=0.6.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
]

[tool.uv]
required-version = ">=0.4"
