[project]
name = "wsp-v3"
version = "3.0.0"
description = "Web Search Pro V3 — Unified modular web research suite with Brave, Tavily, and Bing engines"
authors = [{ name = "OpenClaw Agent" }]
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.4"]

[tool.uv]
managed = true
